[gd_scene load_steps=9 format=3 uid="uid://dcqsy6vwxhbwq"]

[ext_resource type="Script" uid="uid://cfosts6m02p2v" path="res://Scripts/Interface/MainMenu.gd" id="1_buu5b"]
[ext_resource type="Texture2D" uid="uid://c07fehxayjcc7" path="res://Assets/Interface/ui_images/label_title_2x1.png" id="2_i1btt"]
[ext_resource type="Texture2D" uid="uid://d3ao3agusf7lu" path="res://Assets/buttons/continue_btn_2x1.png" id="3_i1btt"]
[ext_resource type="Texture2D" uid="uid://d0hnqd2oossd" path="res://Assets/buttons/new_game_btn_2x1.png" id="4_lu5lc"]
[ext_resource type="Texture2D" uid="uid://dopervygo6x8q" path="res://Assets/buttons/load_game_btn_2x1.png" id="5_20vek"]
[ext_resource type="Texture2D" uid="uid://bvvbgygu03jro" path="res://Assets/buttons/options_btn_2x1.png" id="6_b3gd5"]
[ext_resource type="Texture2D" uid="uid://dxgo5hvj4mbwj" path="res://Assets/buttons/skins_btn_2x1.png" id="7_tytll"]
[ext_resource type="Texture2D" uid="uid://dwf6db0xxmlai" path="res://Assets/buttons/credits_btn_2x1.png" id="8_037rv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_buu5b")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1

[node name="title" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1.0
offset_bottom = 23.0
texture = ExtResource("2_i1btt")

[node name="continue_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = -568.0
offset_bottom = 8.0
grow_horizontal = 2
texture_normal = ExtResource("3_i1btt")
ignore_texture_size = true
stretch_mode = 0

[node name="new_game_button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("4_lu5lc")
ignore_texture_size = true
stretch_mode = 0

[node name="load_game_button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("5_20vek")
ignore_texture_size = true
stretch_mode = 0

[node name="options_button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("6_b3gd5")
ignore_texture_size = true
stretch_mode = 0

[node name="skins_button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("7_tytll")
ignore_texture_size = true
stretch_mode = 0

[node name="credits_button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("8_037rv")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="continue_button" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="new_game_button" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="load_game_button" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="options_button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="skins_button" to="." method="_on_skins_pressed"]
[connection signal="pressed" from="credits_button" to="." method="_on_credits_pressed"]
